--- a/css/main.css
+++ b/css/main.css
@@ -28,21 +28,47 @@ body{
     background-color: var(--white);
     padding: 15px;
     border-radius: 20px;
+    overflow: hidden;
+    position: relative;
+}
+
+.box::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: var(--light-Gray);
+    transition: 0.4s;
+}
+
+.box:hover:before{
+    left: 0;
 }
 
 .box img{
     max-width: 100%;
     border-radius: 20px;
+    position: relative;
+    transition: 0.3s 0.4s;
+}
+
+.box:hover img{
+    transform: translateY(-20px);
+    transform: scale(1.04);
 }
 
 .box h2{
     font-size: 20px;
     color: var(--dark-blue);
     padding: 10px;
+    position: relative;
 }
 
 p{
     color: var(--grayish-blue);
+    position: relative;
 }
 
 p.footer{
